# fastapi-class

./: .coveragerc  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  Setup.cfg  codecov.yml  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: depandabot.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  lint.yaml  publish.yml  release.yml  test.yml
Scripts/: test.sh  test_html.sh
code_of_conduct/: index.html
contributing/: index.html
docs/: contributing.md  index.md  installation.md  license.md  overview.md
fastapi_class/: __init__.py  args.py  config.py  decorators.py  exceptions.py  healthcheck.py  logger.py  openapi.py  response.py  routable.py  routers.py  serializer.py  settings.py  types.py  views.py
fastapi_class/errors/: __init__.py  exceptions.py  handlers.py  models.py  utils.py
fastapi_class/exception/: __init__.py  handler.py
fastapi_class/views/: __init__.py  api.py  functools.py  generics.py  mixins.py  viewsets.py
installation/: index.html
license/: index.html
overview/: index.html
requirements/: linting.txt  pyproject.txt  testing.in  testing.txt
scripts/: lint.sh  requirements.sh  test.sh
search/: search_index.json
tests/: __init__.py  factory.py  test_exceptions.py  test_logger.py  test_metadata.py  test_openapi.py  test_routable.py  test_routers.py  test_version.py  test_views.py
